@@ -6,6 +6,7 @@ CHANGELOG Roundcube Webmail
 - Fix missing language name in "Add to Dictionary" request in HTML mode (#1490634)
 - Enable use of TLSv1.1 and TLSv1.2 for IMAP (#1490640)
 - Fix XSS issue in SVG images handling (#1490625)
+- Fix (again) security issue in DBMail driver of password plugin [CVE-2015-2181] (#1490643)
 
 RELEASE 1.1.4
 -------------
